<resources>
    <string name="app_name">AndroidEatIt</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_refresh">Refresh</string>

    <string name="menu_home">Home</string>
    <string name="menu_food_detail">Food Detail</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_food_list">Food List</string>
    <string name="menu_menu">Categories</string>
    <string name="menu_view_orders">View Orders</string>

    <string name="popular_categories">Popular Categories</string>
    <string name="best_deals">Best Deals</string>
    <string name="popular">Popular</string>
    <string name="size">Size</string>
    <string name="addon">Addon</string>
    <string name="action_clear_cart">Clear Cart</string>
    <string name="action_info_account">Account Update Information</string>
    <string name="sign_out">Sign out</string>

</resources>
