<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/home_group">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_restaurant_menu_black_24dp"
            android:title="@string/menu_menu" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_view_orders"
            android:icon="@drawable/ic_view_headline_black_24dp"
            android:title="@string/menu_view_orders"/>
    </group>


    <group android:id="@+id/user_group">

        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account"
            android:title="Account">

        </item>

        <item
            android:id="@+id/nav_sign_out"
            android:onClick="signOut"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/sign_out" />

    </group>

</menu>
